syntax = "proto3";

package notifications;

option go_package = "github.com/xmtp/example-notification-server-go/pkg/proto";

service Notifications {
    rpc RegisterInstallation (RegisterInstallationRequest) returns (RegisterInstallationResponse);
    rpc DeleteInstallation (DeleteInstallationRequest) returns (google.protobuf.Empty);
    rpc Subscribe (SubscribeRequest) returns (google.protobuf.Empty);
    rpc Unsubscribe (UnsubscribeRequest) returns (google.protobuf.Empty);
}

message DeliveryMechanism {
    oneof delivery_mechanism_type {
        string apns_device_token = 1;
        string firebase_device_token = 2;
    }
}

message RegisterInstallationRequest {
    string installation_id = 1;
    DeliveryMechanism delivery_mechanism = 2;
}

message RegisterInstallationResponse {
    string installation_id = 1;
    uint64 valid_until = 2;
}

message DeleteInstallationRequiest {
    string installation_id = 1;
}

message SubscribeRequest {
    string installation_id = 1;
    repeated string topics = 2;
}

message UnsubscribeRequest {
    string installation_id = 1;
    repeated string topics = 2;
}